--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>言葉データベース</title>
+    <title>新しく知った言葉辞典</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <h1>言葉データベース</h1>
+        <h1>新しく知った言葉辞典</h1>
+        <div class="search-container">
+            <input type="text" id="search-box" placeholder="検索...">
+        </div>
     </header>
 
     <div id="tag-container"></div>
