--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Yuji+Kyokasho&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
         <h1>調べた言葉辞典</h1>
-        <div class="search-container">
-            <input type="text" id="search-box" placeholder="検索...">
+        <div class="header-controls">
+            <div id="word-count-display"></div>
+            <div class="search-container">
+                <input type="text" id="search-box" placeholder="検索...">
+            </div>
         </div>
     </header>
 
