--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&family=Yuji+Kyokasho&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css">
+    <meta name="google-site-verification" content="OB7C5IZ9zHKrwbt5JIEtqmBnIiyGHrJlpDZ1cUb7-wU" />
 </head>
 <body>
 
@@ -30,4 +31,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
