--- a/form.html
+++ b/form.html
@@ -41,7 +41,7 @@
         <div class="output-area">
             <h2>プレビュー</h2>
             <div id="preview-output">
-                </div>
+            </div>
 
             <div class="tab-container">
                 <button class="tab-btn active" data-tab="code">生成コード</button>
@@ -49,6 +49,10 @@
             </div>
             
             <div id="code-content" class="tab-content active">
+                <div class="code-actions">
+                    <button id="copy-code-btn">コピー</button>
+                    <button id="clear-code-btn">クリア</button>
+                </div>
                 <textarea id="code-output" rows="15"></textarea>
             </div>
 
